* biogenesis (0.9.1)

-  Cleanup
-  Update dependency versions
-  Fix some minor code issues.
-  Migrate documents to =org-mode=.

* biogenesis (0.9)

  Sébastien Le Callonnec's “version” of Biogenesis.

-  Added JRuby scripting capability.
-  Added export button in the lab to export genetic code.
-  Double-clicking the genetic code panel opens the lab anywhere.
-  Select organism just pasted into the world.
-  Fixed bug: Division by 0 error when viewing the statistics as the
   world has no organism left.
-  Added family tree.
-  Added sounds when organisms collide (using =jfugue=)

* biogenesis (0.8)

-  Added import button in the laboratory, to import genetic code files.
-  File dialogs now remember last directory.
-  File extensions automatically added if not specified.
-  New parameter to control corpses decomposition speed.
-  Energy to reproduce is now visible from the info toolbar.
-  Info toolbar now automatically updates its label when changing
   locale.
-  Mutate every treat (length, degree or color) independently.
-  Accelerator keys for pause and save actions.
-  Added command line argument to set random seed.
-  Show biogenesis icon in all windows.
-  Use only one main window.
-  New icons by Florian Haag.
-  Let's save world when quitting.
-  Localized option dialogs.
-  Fixed bug: CO2 were consumed when using yellow segments, even if the
   child couldn't be placed into the world. (thanks to marcodbaa)
-  Updated documentation.

* biogenesis (0.7)

-  Organisms can have any symmetry from 1 to 8.
-  Gene segments use now polar coordinates.
-  Many more possible organisms.
-  Slightly better drawing performance.
-  Easier edition in genetic laboratory.
-  Improved genetic code visualization in the laboratory.
-  Fixed bug: now really preserve window size.
-  Fixed bug: better coordinate rounding when drawing organisms.
-  Fixed bug: avoid shrinking organisms if haven't space.

* biogenesis (0.6)

-  Organisms shrink when have little energy.