@@ -89,9 +89,9 @@ T_CONFIRM_FILE_OVERRIDE=Are you sure that you want to overwrite this file?
 T_FILE_EXISTS=This file already exists
 T_PERMISSION_DENIED=Permission denied
 T_BIOGENESIS=Biogenesis
-T_YOUR_VERSION=Your version: 
-T_LAST_VERSION=Last version: 
-T_CANT_CHECK_CURRENT_VERSION=I can't check the current version: 
+T_YOUR_VERSION=Your version:
+T_LAST_VERSION=Last version:
+T_CANT_CHECK_CURRENT_VERSION=I can't check the current version:
 T_KILL_ALL=Kill all
 T_KILL_ALL_ORGANISMS=Kill all organisms
 T_NETWORK=Network
@@ -102,24 +102,24 @@ T_GAME_PAUSED=Game paused
 T_GAME_RESUMED=Game resumed
 T_WORLD_LOADED_SUCCESSFULLY=World loaded successfully
 T_WRITING_COMPLETED=Writing completed
-T_FPS=FPS: 
-T_CURRENT_POPULATION=Current population: 
-T_O2=O\u2082: 
-T_CO2=CO\u2082: 
+T_FPS=FPS:
+T_CURRENT_POPULATION=Current population:
+T_O2=O\u2082:
+T_CO2=CO\u2082:
 T_SAVE_BEFORE_QUIT=Do you want to save this world before quitting?
 # MainApplet.java
 T_START=Start
 T_STOP=Stop
 # GenesWindow.java
-T_SYMMETRY=Symmetry: 
-T_MIRROR=Mirror: 
+T_SYMMETRY=Symmetry:
+T_MIRROR=Mirror:
 T_YES=Yes
 T_NO=No
-T_DISPERSE_CHILDREN=Disperse children: 
-T_ENERGY_TO_REPRODUCE=Energy to reproduce: 
-T_LIFE_EXPECTANCY=Life expectancy: 
-T_GENE=Gene 
-T_COLOR=, colour 
+T_DISPERSE_CHILDREN=Disperse children:
+T_ENERGY_TO_REPRODUCE=Energy to reproduce:
+T_LIFE_EXPECTANCY=Life expectancy:
+T_GENE=Gene
+T_COLOR=, colour
 T_GENES=Genes
 T_RED=red
 T_GREEN=green
@@ -132,19 +132,19 @@ T_WHITE=white
 T_GRAY=gray
 T_YELLOW=yellow
 # InfoToolbar.java
-T_ID=ID: 
-T_FATHER_ID=Father's ID: 
-T_GENERATION=Generation: 
-T_AGE=Age: 
-T_ENERGY=Energy: 
-T_CHILDREN=Children: 
-T_MASS=Mass: 
+T_ID=ID:
+T_FATHER_ID=Father's ID:
+T_GENERATION=Generation:
+T_AGE=Age:
+T_ENERGY=Energy:
+T_CHILDREN=Children:
+T_MASS=Mass:
 T_EXAMINE_GENES=Examine genes
 T_FAMILY_TREE_BUTTON=Family Tree...
 T_STATE=State
-T_VICTIMS=Victims: 
-T_INFECTED=Infected: 
-T_REPRODUCTION=Reproduction: 
+T_VICTIMS=Victims:
+T_INFECTED=Infected:
+T_REPRODUCTION=Reproduction:
 # ParamDialog.java
 T_PARAMETERS_CONFIGURATION=Parameters configuration
 T_LANGUAGE=Language:
@@ -182,44 +182,44 @@ T_OPENGL=OpenGL
 T_DIRECTX_IS_AUTOMATICALLY_DETECTED_AND_INITIALIZED=DirectX is automatically detected and initialized
 T_APPLICATION_MUST_BE_RESTARTED_TO_APPLY_CHANGES=Application must be restarted to apply changes
 T_DISABLE_FBOBJECT=Disable fbobject (try if OpenGL doesn't work)
-T_DECAY_ENERGY=Energy lost by dead organisms: 
+T_DECAY_ENERGY=Energy lost by dead organisms:
 # StatisticsWindow.java
 T_DEATHS=Deaths
 T_BIRTHS=Births
 T_POPULATION=Population
-T_AVERAGE_POPULATION=Average population: 
-T_AVERAGE_BIRTH_RATE=Average birth rate: 
-T_AVERAGE_MORTALITY_RATE=Average mortality rate: 
-T_AVERAGE_INFECTIONS_RATE=Average infections rate: 
-T_GENERATED_ORGANISMS=Generated organisms: 
-T_MAXIMUM_POPULATION=Maximum population: 
-T_AT_TIME=  at time: 
-T_MINIMUM_POPULATION=Minimum population: 
-T_MASS_EXTINTIONS=Mass extintions: 
+T_AVERAGE_POPULATION=Average population:
+T_AVERAGE_BIRTH_RATE=Average birth rate:
+T_AVERAGE_MORTALITY_RATE=Average mortality rate:
+T_AVERAGE_INFECTIONS_RATE=Average infections rate:
+T_GENERATED_ORGANISMS=Generated organisms:
+T_MAXIMUM_POPULATION=Maximum population:
+T_AT_TIME=  at time:
+T_MINIMUM_POPULATION=Minimum population:
+T_MASS_EXTINTIONS=Mass extinctions:
 T_OXYGEN=Oxygen
 T_CARBON_DIOXIDE=Carbon dioxide
-T_MAXIMUM_CARBON_DIOXIDE=Maximum carbon dioxide: 
-T_MINIMUM_CARBON_DIOXIDE=Minimum carbon dioxide: 
-T_MAXIMUM_OXYGEN=Maximum oxygen: 
-T_MINIMUM_OXYGEN=Minimum oxygen: 
+T_MAXIMUM_CARBON_DIOXIDE=Maximum carbon dioxide:
+T_MINIMUM_CARBON_DIOXIDE=Minimum carbon dioxide:
+T_MAXIMUM_OXYGEN=Maximum oxygen:
+T_MINIMUM_OXYGEN=Minimum oxygen:
 T_ATMOSPHERE=Atmosphere
 T_WORLD_HISTORY=World history
-T_OXYGEN2=Oxygen: 
-T_POPULATION2=Population: 
-T_CARBON_DIOXIDE2=Carbon dioxide: 
-T_TIME=Time: 
-T_REMAINS_OF_BEINGS=Remains of beings: 
-T_COLOR_PROPORTION=Color proportion: 
+T_OXYGEN2=Oxygen:
+T_POPULATION2=Population:
+T_CARBON_DIOXIDE2=Carbon dioxide:
+T_TIME=Time:
+T_REMAINS_OF_BEINGS=Remains of beings:
+T_COLOR_PROPORTION=Color proportion:
 T_CURRENT_STATE=Current state
-T_ALIVE_BEING_HAVING_THE_MOST_CHILDREN=Alive being having the most children: 
-T_BEING_HAVING_THE_MOST_CHILDREN=Being having the most children: 
-T_NUMBER_OF_CHILDREN=Number of children: 
-T_ALIVE_BEING_HAVING_THE_MOST_VICTIMS=Alive being having the most victims: 
+T_ALIVE_BEING_HAVING_THE_MOST_CHILDREN=Alive being having the most children:
+T_BEING_HAVING_THE_MOST_CHILDREN=Being having the most children:
+T_NUMBER_OF_CHILDREN=Number of children:
+T_ALIVE_BEING_HAVING_THE_MOST_VICTIMS=Alive being having the most victims:
 T_BEING_HAVING_THE_MOST_VICTIMS=Being having the most victims:
-T_NUMBER_OF_VICTIMS=Number of victims: 
-T_ALIVE_BEING_HAVING_THE_MOST_INFECTED=Alive being having the most infected: 
-T_BEING_HAVING_THE_MOST_INFECTED=Being having the most infected: 
-T_NUMBER_OF_INFECTED=Number of infected: 
+T_NUMBER_OF_VICTIMS=Number of victims:
+T_ALIVE_BEING_HAVING_THE_MOST_INFECTED=Alive being having the most infected:
+T_BEING_HAVING_THE_MOST_INFECTED=Being having the most infected:
+T_NUMBER_OF_INFECTED=Number of infected:
 T_REMARKABLE_ORGANISMS=Remarkable organisms
 T_OLDEST_BEING_ALIVE=Oldest being alive
 T_AGE_OLDEST_BEING=Age: $1
@@ -258,7 +258,7 @@ T_CATALAN=Catalan
 T_SPANISH=Spanish
 # LabWindow.java
 T_GENETIC_LABORATORY=Genetic Laboratory
-T_SEGMENTS=Segments: 
+T_SEGMENTS=Segments:
 T_COPY_TO_CLIPBOARD=Copy to clipboard
 T_CLEAR=Clear
 T_ADD_GENE=Add gene
@@ -283,15 +283,15 @@ T_VERSION_TITLE=Version
 #NetConfigWindow.java
 T_NETWORK_CONFIGURATION=Network configuration
 T_ALLOW_CONNECTIONS_FROM_OTHER_USERS=Allow connections from other users
-T_MAXIMUM_NUMBER_OF_ALLOWED_CONNECTIONS=Maximum number of allowed connections: 
-T_LOCAL_PORT_TO_RECEIVE_CONNECTIONS=Local port to receive connections: 
+T_MAXIMUM_NUMBER_OF_ALLOWED_CONNECTIONS=Maximum number of allowed connections:
+T_LOCAL_PORT_TO_RECEIVE_CONNECTIONS=Local port to receive connections:
 #NetConnectionsWindow.java
 T_NETWORK_CONNECTIONS=Network connections
-T_IP=IP: 
-T_PORT=Port: 
+T_IP=IP:
+T_PORT=Port:
 T_NEW_CONNECTION=New Connection
 T_CONNECTION_FAILED=Connection failed
-T_CANT_STABLISH_CONNECTION=Can't establish connection: 
+T_CANT_STABLISH_CONNECTION=Can't establish connection:
 T_PORT_MUST_BE_A_NUMBER=Port must be a number
 T_DISCONNECT=Disconnect
 #NetServerThread.java
