@@ -46,7 +46,7 @@ T_EXPORT_MNEMONIC=E
 T_SAVE_IMAGE_MNEMONIC=I
 # dead content menu
 T_REVIVE_MNEMONIC=R
-T_DISPERSE_MNEMONIC=D 
+T_DISPERSE_MNEMONIC=D
 # MainWindow.java
 T_RESUME=Segueix
 T_RESUME_PROCESS=Segueix amb el proc\u00E9s
@@ -65,7 +65,7 @@ T_QUIT=Surt
 T_QUIT_PROGRAM=Surt del programa
 T_WORLD=M\u00F3n
 T_STATISTICS=Estad\u00EDstiques
-T_WORLD_STATISTICS=Estad\u00EDstiques del m\u00F3n 
+T_WORLD_STATISTICS=Estad\u00EDstiques del m\u00F3n
 T_INCREASE_CO2=Incrementa el CO2
 T_DECREASE_CO2=Decrementa el CO2
 T_PARAMETERS=Par\u00E0metres...
@@ -88,9 +88,9 @@ T_CONFIRM_FILE_OVERRIDE=Esteu segurs que voleu sobreescriure el fitxer?
 T_FILE_EXISTS=El fitxer ja existeix
 T_PERMISSION_DENIED=S'ha denegat el perm\u00EDs
 T_BIOGENESIS=Biog\u00E8nesi
-T_YOUR_VERSION=La vostra versi\u00F3: 
-T_LAST_VERSION=L'\u00FAltima versi\u00F3: 
-T_CANT_CHECK_CURRENT_VERSION=No es pot comprovar la versi\u00F3 actual: 
+T_YOUR_VERSION=La vostra versi\u00F3:
+T_LAST_VERSION=L'\u00FAltima versi\u00F3:
+T_CANT_CHECK_CURRENT_VERSION=No es pot comprovar la versi\u00F3 actual:
 T_KILL_ALL=Mata'ls tots
 T_KILL_ALL_ORGANISMS=Mata tots els organismes
 T_NETWORK=Xarxa
@@ -101,24 +101,24 @@ T_GAME_PAUSED=S'ha pausat el joc
 T_GAME_RESUMED=S'ha prosseguit el joc
 T_WORLD_LOADED_SUCCESSFULLY=El m\u00F3n s'ha carregat amb \u00E8xit
 T_WRITING_COMPLETED=S'ha completat l'escriptura
-T_FPS=FPS: 
-T_CURRENT_POPULATION=Poblaci\u00F3 actual: 
-T_O2=O2: 
-T_CO2=CO2: 
+T_FPS=FPS:
+T_CURRENT_POPULATION=Poblaci\u00F3 actual:
+T_O2=O2:
+T_CO2=CO2:
 T_SAVE_BEFORE_QUIT=Voleu desar aquest m\u00F3n abans de sortir?
 # MainApplet.java
 T_START=Engega
 T_STOP=Atura
 # GenesWindow.java
-T_SYMMETRY=Simetria: 
-T_MIRROR=Mirall: 
+T_SYMMETRY=Simetria:
+T_MIRROR=Mirall:
 T_YES=S\u00ED
 T_NO=No
-T_DISPERSE_CHILDREN=Dispersa els fills: 
-T_ENERGY_TO_REPRODUCE=Energia per reproduir-se: 
-T_LIFE_EXPECTANCY=Esperan\u00E7a de vida: 
-T_GENE=Gen 
-T_COLOR=, color 
+T_DISPERSE_CHILDREN=Dispersa els fills:
+T_ENERGY_TO_REPRODUCE=Energia per reproduir-se:
+T_LIFE_EXPECTANCY=Esperan\u00E7a de vida:
+T_GENE=Gen
+T_COLOR=, color
 T_GENES=Gens
 T_RED=vermell
 T_GREEN=verd
@@ -131,18 +131,18 @@ T_WHITE=blanc
 T_GRAY=gris
 T_YELLOW=groc
 # InfoWindow.java
-T_ID=Identificador: 
-T_FATHER_ID=Id. del pare: 
-T_GENERATION=Generaci\u00F3: 
-T_AGE=Edat: 
-T_ENERGY=Energia: 
-T_CHILDREN=Fills: 
-T_MASS=Massa: 
+T_ID=Identificador:
+T_FATHER_ID=Id. del pare:
+T_GENERATION=Generaci\u00F3:
+T_AGE=Edat:
+T_ENERGY=Energia:
+T_CHILDREN=Fills:
+T_MASS=Massa:
 T_EXAMINE_GENES=Examina els gens
 T_STATE=Estat
-T_VICTIMS=V\u00EDctimes: 
-T_INFECTED=Infectats: 
-T_REPRODUCTION=Reproducci\u00F3: 
+T_VICTIMS=V\u00EDctimes:
+T_INFECTED=Infectats:
+T_REPRODUCTION=Reproducci\u00F3:
 # ParamDialog.java
 T_PARAMETERS_CONFIGURATION=Configuraci\u00F3 dels par\u00E0metres
 T_LANGUAGE=Idioma:
@@ -180,44 +180,44 @@ T_OPENGL=OpenGL
 T_DIRECTX_IS_AUTOMATICALLY_DETECTED_AND_INITIALIZED=Les DirectX es detecten i s'inicialitzen autom\u00E0ticament
 T_APPLICATION_MUST_BE_RESTARTED_TO_APPLY_CHANGES=Cal reiniciar l'aplicaci\u00F3 per aplicar els canvis
 T_DISABLE_FBOBJECT=Deshabilita fbobject (intenteu-ho si fallen les OpenGL)
-T_DECAY_ENERGY=Energia perduda pels organismes morts: 
+T_DECAY_ENERGY=Energia perduda pels organismes morts:
 # StatisticsWindow.java
 T_DEATHS=Defuncions
 T_BIRTHS=Naixements
 T_POPULATION=Poblaci\u00F3
-T_AVERAGE_POPULATION=Poblaci\u00F3 mitjana: 
-T_AVERAGE_BIRTH_RATE=Natalitat mitjana: 
-T_AVERAGE_MORTALITY_RATE=Mortalitat mitjana: 
-T_AVERAGE_INFECTIONS_RATE=Taxa d'infeccions mitjanes: 
-T_GENERATED_ORGANISMS=Organismes generats: 
-T_MAXIMUM_POPULATION=Poblaci\u00F3 m\u00E0xima: 
-T_AT_TIME=  en temps: 
-T_MINIMUM_POPULATION=Poblaci\u00F3 m\u00EDnima: 
-T_MASS_EXTINTIONS=Extincions massives: 
+T_AVERAGE_POPULATION=Poblaci\u00F3 mitjana:
+T_AVERAGE_BIRTH_RATE=Natalitat mitjana:
+T_AVERAGE_MORTALITY_RATE=Mortalitat mitjana:
+T_AVERAGE_INFECTIONS_RATE=Taxa d'infeccions mitjanes:
+T_GENERATED_ORGANISMS=Organismes generats:
+T_MAXIMUM_POPULATION=Poblaci\u00F3 m\u00E0xima:
+T_AT_TIME=  en temps:
+T_MINIMUM_POPULATION=Poblaci\u00F3 m\u00EDnima:
+T_MASS_EXTINTIONS=Extincions massives:
 T_OXYGEN=Oxigen
 T_CARBON_DIOXIDE=Di\u00F2xid de carboni
-T_MAXIMUM_CARBON_DIOXIDE=Di\u00F2xid de carboni m\u00E0xim: 
-T_MINIMUM_CARBON_DIOXIDE=Di\u00F2xid de carboni m\u00EDnim: 
-T_MAXIMUM_OXYGEN=Oxigen m\u00E0xim: 
-T_MINIMUM_OXYGEN=Oxigen m\u00EDnim: 
+T_MAXIMUM_CARBON_DIOXIDE=Di\u00F2xid de carboni m\u00E0xim:
+T_MINIMUM_CARBON_DIOXIDE=Di\u00F2xid de carboni m\u00EDnim:
+T_MAXIMUM_OXYGEN=Oxigen m\u00E0xim:
+T_MINIMUM_OXYGEN=Oxigen m\u00EDnim:
 T_ATMOSPHERE=Atmosfera
 T_WORLD_HISTORY=Hist\u00F2ria del m\u00F3n
-T_OXYGEN2=Oxigen: 
-T_POPULATION2=Poblaci\u00F3: 
-T_CARBON_DIOXIDE2=Di\u00F2xid de carboni: 
-T_TIME=Temps: 
-T_REMAINS_OF_BEINGS=Restes d'\u00E9ssers: 
-T_COLOR_PROPORTION=Proporci\u00F3 de colors: 
+T_OXYGEN2=Oxigen:
+T_POPULATION2=Poblaci\u00F3:
+T_CARBON_DIOXIDE2=Di\u00F2xid de carboni:
+T_TIME=Temps:
+T_REMAINS_OF_BEINGS=Restes d'\u00E9ssers:
+T_COLOR_PROPORTION=Proporci\u00F3 de colors:
 T_CURRENT_STATE=Estat actual
-T_ALIVE_BEING_HAVING_THE_MOST_CHILDREN=\u00C9sser viu amb m\u00E9s fills: 
-T_BEING_HAVING_THE_MOST_CHILDREN=\u00C9sser amb m\u00E9s fills: 
-T_NUMBER_OF_CHILDREN=Nombre de fills: 
-T_ALIVE_BEING_HAVING_THE_MOST_VICTIMS=\u00C9sser viu amb m\u00E9s v\u00EDctimes: 
+T_ALIVE_BEING_HAVING_THE_MOST_CHILDREN=\u00C9sser viu amb m\u00E9s fills:
+T_BEING_HAVING_THE_MOST_CHILDREN=\u00C9sser amb m\u00E9s fills:
+T_NUMBER_OF_CHILDREN=Nombre de fills:
+T_ALIVE_BEING_HAVING_THE_MOST_VICTIMS=\u00C9sser viu amb m\u00E9s v\u00EDctimes:
 T_BEING_HAVING_THE_MOST_VICTIMS=\u00C9sser amb m\u00E9s v\u00EDctimes:
-T_NUMBER_OF_VICTIMS=Nombre de v\u00EDctimes: 
-T_ALIVE_BEING_HAVING_THE_MOST_INFECTED=\u00C9sser viu amb m\u00E9s infectats: 
-T_BEING_HAVING_THE_MOST_INFECTED=\u00C9sser amb m\u00E9s infectats: 
-T_NUMBER_OF_INFECTED=Nombre d'infectats: 
+T_NUMBER_OF_VICTIMS=Nombre de v\u00EDctimes:
+T_ALIVE_BEING_HAVING_THE_MOST_INFECTED=\u00C9sser viu amb m\u00E9s infectats:
+T_BEING_HAVING_THE_MOST_INFECTED=\u00C9sser amb m\u00E9s infectats:
+T_NUMBER_OF_INFECTED=Nombre d'infectats:
 T_REMARKABLE_ORGANISMS=Organismes notables
 T_UPDATE=Actualitza
 T_CLOSE=Tanca
@@ -253,7 +253,7 @@ T_CATALAN=Catal\u00E0
 T_SPANISH=Castell\u00E0
 # LabWindow.java
 T_GENETIC_LABORATORY=Laboratori gen\u00E8tic
-T_SEGMENTS=Segments: 
+T_SEGMENTS=Segments:
 T_COPY_TO_CLIPBOARD=Copia al porta-retalls
 T_CLEAR=Neteja
 T_ADD_GENE=Afegeix gen
@@ -278,15 +278,15 @@ T_VERSION_TITLE=Versi\u00F3
 #NetConfigWindow.java
 T_NETWORK_CONFIGURATION=Configura la xarxa
 T_ALLOW_CONNECTIONS_FROM_OTHER_USERS=Permet connexions d'altres usuaris
-T_MAXIMUM_NUMBER_OF_ALLOWED_CONNECTIONS=Nombre m\u00E0xim de connexions permeses: 
-T_LOCAL_PORT_TO_RECEIVE_CONNECTIONS=Port local per rebre connexions: 
+T_MAXIMUM_NUMBER_OF_ALLOWED_CONNECTIONS=Nombre m\u00E0xim de connexions permeses:
+T_LOCAL_PORT_TO_RECEIVE_CONNECTIONS=Port local per rebre connexions:
 #NetConnectionsWindow.java
 T_NETWORK_CONNECTIONS=Connexions de xarxa
-T_IP=IP: 
-T_PORT=Port: 
+T_IP=IP:
+T_PORT=Port:
 T_NEW_CONNECTION=Nova connexi\u00F3
 T_CONNECTION_FAILED=Connexi\u00F3 fallida
-T_CANT_STABLISH_CONNECTION=No es pot establir la connexi\u00F3: 
+T_CANT_STABLISH_CONNECTION=No es pot establir la connexi\u00F3:
 T_PORT_MUST_BE_A_NUMBER=El port ha de ser un nombre
 T_DISCONNECT=Desconnecta
 #NetServerThread.java
